2014-01-21  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (mapcarv, mappendv): Convert output to type of leftmost
	input sequence.

	* lib.c (make_like): New function.
	(reverse, remq, remql, remqual, remove_if, keep_if, mapcar, mapcon,
	mappend, set_diff): Convert output list to type of leftmost input
	sequence.

	* lib.h (make_like): Declared.

	* txr.1: Documented.

2014-01-21  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (car, cdr, ldiff): Extend to handle vectors and strings.
	Thereby, numerous previously list-only operations in TXR Lisp
	now magically handle strings and vectors.

	* txr.1: Documented.

2014-01-20  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (broken_down_time_list): New static function.
	(time_fields_local, time_fields_utc): New functions.

	* lib.h (time_fields_local, time_fields_utc): Declared.

	* eval.c (eval_init): Intern time_fields_local and time_fields_utc
	as intrinsic functions.

	* txr.1: Documented.

2014-01-16  Kaz Kylheku  <kaz@kylheku.com>

	* hash.c (group_by): New function.

	* hash.h (group_by): Declared.

	* eval.c (eval_init): group_by registered as group-by intrinsic.

	* txr.1: Documented.

2014-01-16  Kaz Kylheku  <kaz@kylheku.com>

	Version 75

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES, txr.vim: Updated.

2014-01-15  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (obj_print, obj_pprint): Convert the internal representation
	of @sym and @(expr ...) syntax back to these notations instead
	of leaving them as (sys:var sym) and (sys:expr expr ...).

2014-01-15  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (append_each_s, append_each_star_s): New symbol variables.
	(op_each, expand): Support append-each and append-each*.
	(eval_init): Initialize new symbol variables, and register
	new operators.

	* txr.1: Document append-each and append-each*.

2014-01-14  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Wrote missing documentation for throw, throwf and error.
